crates/bitnet-kernels/tests/snapshots/snapshot_wave22__pool_config_max_pool_3x3.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 543
expression: cfg
---
PoolConfig {
    pool_type: Max,
    kernel_size: 3,
    stride: 2,
    padding: 1,
    dilation: 1,
    ceil_mode: false,
}
