crates/bitnet-kernels/tests/snapshots/snapshot_wave22__quant_bit_width_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 280
expression: variants
---
[
    Int2,
    Int4,
    Int8,
]
