crates/bitnet-kernels/tests/snapshots/snapshot_wave22__scale_mode_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 287
expression: variants
---
[
    Uniform,
    PerBlock,
    PerChannel,
]
