crates/bitnet-kernels/tests/snapshots/snapshot_wave22__schedule_strategy_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 80
expression: variants
---
[
    RoundRobin,
    LeastLoaded,
    PriorityBased,
]
