crates/bitnet-kernels/tests/snapshots/snapshot_wave22__sharding_strategy_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 471
expression: variants
---
[
    ColumnParallel,
    RowParallel,
    Custom {
        splits: [
            128,
            256,
            128,
        ],
    },
]
