crates/bitnet-kernels/tests/snapshots/snapshot_wave22__sparse_config_bsr_with_block_size.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 120
expression: cfg
---
SparseConfig {
    format: BSR,
    block_size: 64,
    threshold: 0.01,
    rows: 2048,
    cols: 2048,
}
