crates/bitnet-kernels/tests/snapshots/snapshot_wave22__sparse_format_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 104
expression: formats
---
[
    CSR,
    CSC,
    COO,
    BSR,
    Block,
]
